Bug 245354 - Cannot add new Favorites from a research result
Summary: Cannot add new Favorites from a research result
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-lancelot (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-21 21:15 UTC by Frédéric COIFFIER
Modified: 2010-10-22 13:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frédéric COIFFIER 2010-07-21 21:15:19 UTC
Version:           unspecified (using Devel) 
OS:                Linux

I can add a favorites by navigating in Lancelot's menus but I can't add it from a research result

Currently, I've removed all current application and ~/.kde4/share/config/lancelotrc contains :

[Favorites]
FavoriteURLs=


Reproducible: Always

Steps to Reproduce:
1. In Lancelot | Programs menu, move the mouse on an application icon
2. Right click to get the context menu 
3. Click on "Add to favorites"
=> It works and the application is added to the favorites

1. Look for an application in Lancelot with the line edit field
2. In the result list, right click to get the context menu
3. Click on "Add to favorites"
=> It doesn't work : the application isn't added to the favorites





It seems to be a regression as it worked in previous KDE versions.
Comment 1 Ivan Čukić 2010-07-30 00:09:34 UTC
Thanks for reporting... there is something fishy going on there :)
Comment 2 Ivan Čukić 2010-10-22 13:29:22 UTC
SVN commit 1188428 by ivan:

Fixed adding favourites from the search results

BUG:245354



 M  +3 -1      applets/lancelot/application/LancelotWindow.cpp  
 M  +4 -2      libs/lancelot-datamodels/Runner.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1188428