Fixed adding favourites from the search results

BUG:245354


svn path=/trunk/KDE/kdeplasma-addons/; revision=1188428